fixesd alignment in mobile subnav and removed deadmau5 styles

--- a/src/scss/components/dynamic/new-cm-hero.scss
+++ b/src/scss/components/dynamic/new-cm-hero.scss
@@ -109,15 +109,6 @@ body.show_enrolled {
       font-size: 1em;
       color: white;
 
-      .dm-cm-logo {
-        position: relative;
-        top: -1px;
-        margin-bottom: -1px;
-        display: block;
-        width: 75px;
-        height: auto;
-      }
-
       .class-title {
         color: rgba(255, 255, 255, 0.5);
       }
